added project pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,14 @@
 sass:
     sass_dir: r/css/_sass
+
+collections:
+  projects:
+    output: true
+    permalink: /work/:title/
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "project"
